New rxvt style added
svn path=/trunk/ncurses/; revision=38450

--- a/libyui-ncurses/src/Makefile.am
+++ b/libyui-ncurses/src/Makefile.am
@@ -90,6 +90,7 @@ noinst_HEADERS = 		\
 	NCPopupInfo.h       	\
 	NCstyle.braille.h NCstyle.mono.h	\
 	NCstyle.linux.h NCstyle.xterm.h		\
+	NCstyle.rxvt.h				\
 	Y2CCNCursesUI.h				\
 	YNCursesComponent.h
 
