Let's make repository list popup a separate class (selection popup class cannot be recycled). Does not show anything useful yet
svn path=/branches/REFACTORING-10_3/ncurses/; revision=39440

--- a/libyui-ncurses/src/pkg/Makefile.am
+++ b/libyui-ncurses/src/pkg/Makefile.am
@@ -25,6 +25,7 @@ noinst_HEADERS =			\
 	NCPkgPopupDiskspace.h		\
 	NCPkgPopupDescr.h		\
 	NCPkgPopupTable.h		\
+	NCPkgPopupRepo.h		\
 	NCPkgPopupSearch.h		\
 	NCPkgPopupSelection.h		\
 	NCPkgPopupTree.h		\
@@ -39,6 +40,7 @@ libpy2ncurses_pkg_la_SOURCES =		\
 	NCPkgPopupDiskspace.cc		\
 	NCPkgPopupDescr.cc		\
 	NCPkgPopupTable.cc		\
+	NCPkgPopupRepo.cc		\
 	NCPkgPopupSearch.cc		\
 	NCPkgPopupSelection.cc		\
 	NCPkgPopupTree.cc		\
