--- a/libyui-ncurses/yast2-ncurses.spec.in
+++ b/libyui-ncurses/yast2-ncurses.spec.in
@@ -17,8 +17,8 @@ Obsoletes:	yast2-ui-ncurses-devel
 Provides:	y2curses
 Obsoletes:	y2curses
 Requires:	glibc-locale
-#Resolver::verifySystem 
-Requires:	libzypp >= 2.12.1
+#adapted to libzypp 3.11 refactoring
+Requires:	libzypp >= 3.11.8
 #UI plugins - YPackageSelectorPlugin.h
 Requires:	yast2-core >= 2.15.6
 %description
