Finished integrating Feature #120292, UI as a namespace callable from yast2-*-bindings.
Merged revisions 39049-39831,39834-40189 via svnmerge from 
http://svn.opensuse.org/svn/yast/branches/tmp/mvidner/ui-as-namespace/ncurses

........
  r39049 | mvidner | 2007-06-27 12:07:36 +0200 (St, 27 čen 2007) | 2 lines
  
  branching a UI
........
  r39061 | mvidner | 2007-06-27 18:25:12 +0200 (St, 27 čen 2007) | 3 lines
  
  First version where we can call UI from Perl
  (but gtk segfaults)
........
  r39988 | mvidner | 2007-08-06 13:57:07 +0200 (Po, 06 srp 2007) | 3 lines
  
  Adapted to changes in yast2-core needed for making UI callable from
  yast2-*-bindings.
........

svn path=/trunk/ncurses/; revision=40190

--- a/libyui-ncurses/src/Makefile.am
+++ b/libyui-ncurses/src/Makefile.am
@@ -5,7 +5,6 @@
 SUBDIRS = pkg
 
 AM_CXXFLAGS = -DY2LOG=\"ui-ncurses\" -DLOCALEDIR=\"${localedir}\"
-AM_LDFLAGS = -L$(libdir)
 
 # plugin, libtool forces 'lib' prefix
 plugin_LTLIBRARIES = libpy2ncurses.la
@@ -15,14 +14,14 @@ libpy2ncurses_la_LDFLAGS = -version-info 2:0
 #liby2ncurses_la_LDFLAGS = -version-info 2:0
 
 libpy2ncurses_la_LIBADD =		\
-	-L$(libdir)			\
-	-lyui				\
+	-L$(plugindir)			\
+	-lpy2UI				\
 	-lncursesw -lpanelw
 
 #libpy2ncurses_la_LIBADD =		\
 #	-L$(libdir)			\
 #	-Lpkg -lpy2ncurses_pkg		\
-#	-lyui				\
+#	-lpy2UI				\
 #	-lncursesw -lpanelw
 #liby2ncurses_la_LIBADD = $(libpy2ncurses_la_LIBADD)
 
@@ -164,7 +163,7 @@ libpy2ncurses_la_SOURCES =		\
 #	Y2CCNCursesUI.cc Y2CCNCursesUI.h	\
 #	YNCursesComponent.h
 
-INCLUDES = -I$(srcdir)/pkg -I$(includedir) -I$(includedir)/yui -I$(includedir)/y2util/qt
+INCLUDES = -I$(srcdir)/pkg -I$(includedir) -I$(includedir)/yui -I$(includedir)/y2util/qt ${ZYPP_CFLAGS}
 
 lang2encoding.cc:	lang2encoding.tab
 	./lang2encoding.tab > lang2encoding.cc
