--- a/libyui-qt-pkg/src/CMakeLists.txt
+++ b/libyui-qt-pkg/src/CMakeLists.txt
@@ -55,6 +55,7 @@ SET(qt_yast_pkg_plugin_SRCS
     YQPkgTextDialog.cc
     YQPkgUpdateProblemFilterView.cc
     YQPkgVersionsView.cc
+    YQPackageSelectorPluginImpl.cc
     )
 
 QT4_AUTOMOC(${qt_yast_pkg_plugin_SRCS})
@@ -67,11 +68,14 @@ ADD_LIBRARY( py2qt_pkg SHARED ${qt_yast_pkg_plugin_SRCS})
 TARGET_LINK_LIBRARIES( py2qt_pkg py2qt )
 TARGET_LINK_LIBRARIES( py2qt_pkg ${YAST_LIBRARY} )
 TARGET_LINK_LIBRARIES( py2qt_pkg ${YAST_YCP_LIBRARY} )
+TARGET_LINK_LIBRARIES( py2qt_pkg ${YAST_YUI_LIBRARY} )
 TARGET_LINK_LIBRARIES( py2qt_pkg ${YAST_PLUGIN_WFM_LIBRARY} )
 TARGET_LINK_LIBRARIES( py2qt_pkg ${QT_QTCORE_LIBRARY} )
 TARGET_LINK_LIBRARIES( py2qt_pkg ${QT_QTGUI_LIBRARY} )
 TARGET_LINK_LIBRARIES( py2qt_pkg ${YAST_PLUGIN_UI_LIBRARY} )
+TARGET_LINK_LIBRARIES( py2qt_pkg py2qt )
 TARGET_LINK_LIBRARIES( py2qt_pkg ${ZYPP_LIBRARY} )
 SET_TARGET_PROPERTIES( py2qt_pkg PROPERTIES SOVERSION 2 )
+SET_TARGET_PROPERTIES( py2qt_pkg PROPERTIES LINK_FLAGS "-Wl,--no-undefined -Wl,-rpath -Wl,${YAST_PLUGIN_DIR}" )
 
 INSTALL(TARGETS py2qt_pkg LIBRARY DESTINATION ${YAST_PLUGIN_DIR} )
