--- a/libyui-qt-pkg/yast2-qt-pkg.spec.in
+++ b/libyui-qt-pkg/yast2-qt-pkg.spec.in
@@ -2,16 +2,16 @@
 
 
 @HEADER@
-BuildRequires:	libzypp-devel docbook-xsl-stylesheets doxygen libdrm-devel libjpeg-devel libxcrypt-devel
+BuildRequires:	docbook-xsl-stylesheets doxygen libdrm-devel libjpeg-devel libxcrypt-devel
 BuildRequires:  libxslt perl-XML-Writer libqt4-devel sgml-skel update-desktop-files
 
 Summary:	-
 BuildRequires:  yast2-devtools >= 2.16.3
 BuildRequires:  yast2-core-devel >= 2.16.34
 BuildRequires:  yast2-qt-devel >= 2.16.25
+BuildRequires:  libzypp-devel >= 4.2.4 
 Requires:       yast2-core       >= 2.16.34
 Requires:       yast2_theme >= 2.16.1
-Requires:	libzypp >= 3.11.8
 Provides:	yast2-qt:/usr/lib/YaST2/plugin/libpy2qt_pkg.so.2
 
 %description
