--- a/libyui-ncurses-pkg/yast2-ncurses-pkg.spec.in
+++ b/libyui-ncurses-pkg/yast2-ncurses-pkg.spec.in
@@ -2,17 +2,16 @@
 
 
 @HEADER@
-BuildRequires:	doxygen dejagnu gcc-c++ yast2-core-devel yast2-devtools libzypp-devel
+BuildRequires:	doxygen dejagnu gcc-c++ yast2-core-devel yast2-devtools
 BuildRequires:	libxcrypt-devel blocxx-devel ncurses-devel yast2-ncurses-devel
 
 Summary:	-
 Provides:	yast2-ncurses:@plugindir@/libpy2ncurses.so
 Requires:	glibc-locale
 BuildRequires:	yast2-core-devel >= 2.16.33
+BuildRequires:  libzypp-devel >= 4.2.3
 Requires:	yast2-core >= 2.16.33
 Requires:	yast2-ncurses >= 2.16.15
-#adapted to libzypp 3.11 refactoring
-Requires:	libzypp >= 3.11.8
 %description
 -
 
