--- a/libyui-ncurses-pkg/yast2-ncurses-pkg.spec.in
+++ b/libyui-ncurses-pkg/yast2-ncurses-pkg.spec.in
@@ -8,7 +8,8 @@ BuildRequires:	libxcrypt-devel blocxx-devel ncurses-devel yast2-ncurses-devel
 Summary:	-
 Provides:	yast2-ncurses:@plugindir@/libpy2ncurses.so
 Requires:	glibc-locale
-BuildRequires:	yast2-core-devel >= 2.16.33
+BuildRequires:	yast2-core-devel   >= 2.16.33
+BuildRequires:	yast2-libyui-devel >= 2.16.37
 BuildRequires:  libzypp-devel >= 4.2.3
 Requires:	yast2-core >= 2.16.33
 Requires:	yast2-ncurses >= 2.16.15
