--- a/libyui-ncurses/yast2-ncurses.spec.in
+++ b/libyui-ncurses/yast2-ncurses.spec.in
@@ -8,8 +8,8 @@ BuildRequires:	libxcrypt-devel blocxx-devel ncurses-devel
 Summary:	-
 Provides:	yast2_ui
 Requires:	glibc-locale
-BuildRequires:	yast2-core-devel >= 2.16.36
-Requires:	yast2-core >= 2.16.36
+BuildRequires:	yast2-libyui-devel >= 2.16.37
+Requires:	yast2-libyui       >= 2.16.37
 Recommends:	yast2-ncurses-pkg
 %description
 -
@@ -17,7 +17,7 @@ Recommends:	yast2-ncurses-pkg
 @HEADER-DEVEL@
 Summary:        -
 Requires:	yast2-ncurses >= 2.16.15
-Requires:	ncurses-devel libzypp-devel yast2-core-devel
+Requires:	ncurses-devel yast2-libyui-devel
 
 %description devel
 -
