--- a/libyui-qt-pkg/yast2-qt-pkg.spec.in
+++ b/libyui-qt-pkg/yast2-qt-pkg.spec.in
@@ -7,10 +7,10 @@ BuildRequires:  libxslt perl-XML-Writer libqt4-devel sgml-skel update-desktop-fi
 
 Summary:	-
 BuildRequires:  yast2-devtools >= 2.16.3
-BuildRequires:  yast2-core-devel >= 2.16.34
 BuildRequires:  yast2-qt-devel >= 2.16.25
 BuildRequires:  libzypp-devel >= 4.2.4 
-Requires:       yast2-core       >= 2.16.34
+BuildRequires:  yast2-libyui-devel >= 2.16.37
+Requires:       yast2-libyui       >= 2.16.37
 Requires:       yast2_theme >= 2.16.1
 Provides:	yast2-qt:/usr/lib/YaST2/plugin/libpy2qt_pkg.so.2
 
