--- a/libyui/examples/Makefile.am
+++ b/libyui/examples/Makefile.am
@@ -2,9 +2,9 @@
 # Makefile.am for libyui C++ examples
 #
 
-INCLUDES	= -I$(top_srcdir)/libyui/src/
+INCLUDES	= -I$(top_srcdir)/src/
 
 noinst_PROGRAMS	= HelloWorld
 
 HelloWorld_SOURCES	= HelloWorld.cc
-HelloWorld_LDADD	= -lyui
+HelloWorld_LDADD	= -L$(top_srcdir)/src -lyui
