--- a/libyui-ncurses-pkg/yast2-ncurses-pkg.spec.in
+++ b/libyui-ncurses-pkg/yast2-ncurses-pkg.spec.in
@@ -7,6 +7,7 @@ BuildRequires:	libxcrypt-devel blocxx-devel ncurses-devel yast2-ncurses-devel
 
 Summary:	-
 Provides:	yast2-ncurses:@plugindir@/libpy2ncurses.so
+Provides:	yast2_ui_pkg
 Requires:	glibc-locale
 BuildRequires:	yast2-core-devel   >= 2.16.33
 BuildRequires:	yast2-libyui-devel >= 2.16.37
