provide cmake support for dependent packages
svn path=/trunk/libyui/; revision=45039

--- a/libyui/yast2-libyui.spec.in
+++ b/libyui/yast2-libyui.spec.in
@@ -59,4 +59,7 @@ mkdir -p "$RPM_BUILD_ROOT"@logdir@
 %{_libdir}/lib*.la
 @includedir@
 @pkgconfigdir@/@RPMNAME@.pc
+%dir %{_datadir}/cmake
+%dir %{_datadir}/cmake/Modules
+%{_datadir}/cmake/Modules/*
 %doc @docdir@
