next morning, next package
svn path=/trunk/qt-pkg/; revision=45063

--- a/libyui-qt-pkg/CMakeLists.txt
+++ b/libyui-qt-pkg/CMakeLists.txt
@@ -8,7 +8,9 @@ set( CMAKE_CXX_FLAGS_RELEASE   "${CMAKE_CXX_FLAGS_RELEASE} -DQT_NO_DEBUG -DNDEBU
 SET( RPMNAME "yast2-qt-pkg" )
 
 FIND_PACKAGE(Qt4 REQUIRED)
-FIND_PACKAGE(Yast REQUIRED)
+FIND_PACKAGE(Yast)
+FIND_PACKAGE(Libyui REQUIRED)
+FIND_PACKAGE(Zypp REQUIRED)
 INCLUDE(YastCommon)
 
 SET(Y2QT_ICONDIR ${CMAKE_INSTALL_PREFIX}/share/YaST2/theme/current)
