--- a/libyui-qt-pkg/yast2-qt-pkg.spec.in
+++ b/libyui-qt-pkg/yast2-qt-pkg.spec.in
@@ -7,6 +7,7 @@ BuildRequires:  libxslt perl-XML-Writer libqt4-devel sgml-skel update-desktop-fi
 
 Summary:	-
 BuildRequires:  yast2-devtools >= 2.16.3
+BuildRequires:  yast2-libyui-devel
 Requires:	yast2-qt       >= 2.16.25
 BuildRequires:  yast2-qt-devel >= 2.16.25
 BuildRequires:  libzypp-devel >= 4.2.4 
@@ -45,6 +46,7 @@ rm -rf "$RPM_BUILD_ROOT"
 
 %files
 %defattr (-, root, root)
+%doc COPYING
 %_libdir/YaST2/plugin/libpy2qt_pkg.so.*
 %_libdir/YaST2/plugin/libpy2qt_pkg.so
 
