--- a/libyui-qt-pkg/src/CMakeLists.txt
+++ b/libyui-qt-pkg/src/CMakeLists.txt
@@ -2,10 +2,6 @@
 # package selector
 ################################################################
 
-FIND_PACKAGE(Zypp REQUIRED)
-
-INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${YAST_INCLUDE_DIR}/yast2-qt ${ZYPP_INCLUDE_DIR})
-
 ADD_DEFINITIONS(
 		-DY2LOG=\\\"QT4\\\" ${QT_DEFINITIONS}
 		-DICONDIR=\\"${Y2QT_ICONDIR}\\"
@@ -60,21 +56,19 @@ SET(qt_yast_pkg_plugin_SRCS
 QT4_AUTOMOC(${qt_yast_pkg_plugin_SRCS})
 
 INCLUDE_DIRECTORIES( ${QT_INCLUDES} )
-INCLUDE_DIRECTORIES( ${YAST_INCLUDE_DIR} )
-INCLUDE_DIRECTORIES( ${YAST_INCLUDE_DIR}/yui )
+INCLUDE_DIRECTORIES( ${LIBYUI_INCLUDE_DIR} )
+INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR} )
+INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} )
+INCLUDE_DIRECTORIES( ${CMAKE_INSTALL_PREFIX}/include/YaST2/yast2-qt )
+INCLUDE_DIRECTORIES( ${ZYPP_INCLUDE_DIR} ) 
 
 ADD_LIBRARY( py2qt_pkg SHARED ${qt_yast_pkg_plugin_SRCS})
-TARGET_LINK_LIBRARIES( py2qt_pkg py2qt )
-TARGET_LINK_LIBRARIES( py2qt_pkg ${YAST_LIBRARY} )
-TARGET_LINK_LIBRARIES( py2qt_pkg ${YAST_YCP_LIBRARY} )
-TARGET_LINK_LIBRARIES( py2qt_pkg ${YAST_YUI_LIBRARY} )
-TARGET_LINK_LIBRARIES( py2qt_pkg ${YAST_PLUGIN_WFM_LIBRARY} )
+TARGET_LINK_LIBRARIES( py2qt_pkg ${UI_PLUGIN_DIR}/libpy2qt.so )
+TARGET_LINK_LIBRARIES( py2qt_pkg ${LIBYUI_LIBRARY} )
+TARGET_LINK_LIBRARIES( py2qt_pkg ${ZYPP_LIBRARY} )
 TARGET_LINK_LIBRARIES( py2qt_pkg ${QT_QTCORE_LIBRARY} )
 TARGET_LINK_LIBRARIES( py2qt_pkg ${QT_QTGUI_LIBRARY} )
-TARGET_LINK_LIBRARIES( py2qt_pkg ${YAST_PLUGIN_UI_LIBRARY} )
-TARGET_LINK_LIBRARIES( py2qt_pkg py2qt )
-TARGET_LINK_LIBRARIES( py2qt_pkg ${ZYPP_LIBRARY} )
 SET_TARGET_PROPERTIES( py2qt_pkg PROPERTIES SOVERSION 2 )
-SET_TARGET_PROPERTIES( py2qt_pkg PROPERTIES LINK_FLAGS "-Wl,--no-undefined -Wl,-rpath -Wl,${YAST_PLUGIN_DIR}" )
+SET_TARGET_PROPERTIES( py2qt_pkg PROPERTIES LINK_FLAGS "-Wl,--no-undefined -Wl,-rpath -Wl,${UI_PLUGIN_DIR}" )
 
-INSTALL(TARGETS py2qt_pkg LIBRARY DESTINATION ${YAST_PLUGIN_DIR} )
+INSTALL(TARGETS py2qt_pkg LIBRARY DESTINATION ${UI_PLUGIN_DIR} )
