--- a/libyui-ncurses/testsuite/Makefile.am
+++ b/libyui-ncurses/testsuite/Makefile.am
@@ -14,7 +14,7 @@ noinst_PROGRAMS = runcurses utf8test y2ncurses in_wch
 
 runcurses_SOURCES = runcurses.cc
 runcurses_LDADD = ../src/libpy2ncurses.la  \
-	-lncurses -lpanel -lpthread -ly2 -L$(plugindir) -lpy2UI -lycp -lutil
+	-lncurses -lpanel -lpthread -ly2 -L$(plugindir) -lyui -lycp -lutil
 
 runcurses_LDFLAGS = -L$(libdir)			\
 	-Xlinker --whole-archive                \
@@ -25,7 +25,7 @@ utf8test_SOURCES = utf8test.cc			\
 		NCstring_test.h NCstring_test.cc
 
 utf8test_LDADD = ../src/libpy2ncurses.la \
-	-lncursesw -lpanelw -lpthread -ly2 -L$(plugindir) -lpy2UI -lycp -lutil
+	-lncursesw -lpanelw -lpthread -ly2 -L$(plugindir) -lyui -lycp -lutil
 utf8test_LDFLAGS = -L$(libdir)
 
 in_wch_SOURCES = in_wch.cc
@@ -34,7 +34,7 @@ in_wch_SOURCES = in_wch.cc
 in_wch_LDADD = -lncursesw
 
 y2ncurses_SOURCES = y2ncurses.cc
-y2ncurses_LDADD = -lncurses -lpanel -lpthread -ly2 -L$(plugindir) -lpy2UI -lycp \
+y2ncurses_LDADD = -lncurses -lpanel -lpthread -ly2 -L$(plugindir) -lyui -lycp \
 	-lutil
 
 y2ncurses_LDFLAGS = -static -L$(libdir)	\
