--- a/libyui/examples/Makefile.am
+++ b/libyui/examples/Makefile.am
@@ -4,7 +4,13 @@
 
 INCLUDES	= -I$(top_srcdir)/src/
 
-noinst_PROGRAMS	= HelloWorld
+noinst_PROGRAMS	=	\
+	HelloWorld	\
+	SelectionBox1
+
 
 HelloWorld_SOURCES	= HelloWorld.cc
 HelloWorld_LDADD	= -L$(top_srcdir)/src -lyui
+
+SelectionBox1_SOURCES	= SelectionBox1.cc
+SelectionBox1_LDADD	= -L$(top_srcdir)/src -lyui
