simple and advanced example
svn path=/trunk/libyui/; revision=45405

--- a/libyui/examples/Makefile.am
+++ b/libyui/examples/Makefile.am
@@ -6,7 +6,8 @@ INCLUDES	= -I$(top_srcdir)/src/
 
 noinst_PROGRAMS	=	\
 	HelloWorld	\
-	SelectionBox1
+	SelectionBox1	\
+	SelectionBox2
 
 
 HelloWorld_SOURCES	= HelloWorld.cc
@@ -14,3 +15,6 @@ HelloWorld_LDADD	= -L$(top_srcdir)/src -lyui
 
 SelectionBox1_SOURCES	= SelectionBox1.cc
 SelectionBox1_LDADD	= -L$(top_srcdir)/src -lyui
+
+SelectionBox2_SOURCES	= SelectionBox2.cc
+SelectionBox2_LDADD	= -L$(top_srcdir)/src -lyui
