--- a/libyui-qt-pkg/yast2-qt-pkg.spec.in
+++ b/libyui-qt-pkg/yast2-qt-pkg.spec.in
@@ -11,6 +11,7 @@ Requires:	yast2-qt       >= 2.16.25
 BuildRequires:  yast2-qt-devel >= 2.16.25
 BuildRequires:  libzypp-devel >= 4.2.4 
 BuildRequires:  yast2-libyui-devel >= 2.16.37
+Requires:  	libzypp >= 4.2.4 
 Requires:       yast2-libyui       >= 2.16.37
 Requires:       yast2_theme >= 2.16.1
 Provides:	yast2-qt:/usr/lib/YaST2/plugin/libpy2qt_pkg.so.2
