--- a/libyui/examples/Makefile.am
+++ b/libyui/examples/Makefile.am
@@ -4,17 +4,25 @@
 
 INCLUDES	= -I$(top_srcdir)/src/
 
-noinst_PROGRAMS	=	\
-	HelloWorld	\
-	SelectionBox1	\
+noinst_PROGRAMS	=		\
+	HelloWorld		\
+	ComboBox1		\
+	ComboBox1-editable	\
+	SelectionBox1		\
 	SelectionBox2
 
 
-HelloWorld_SOURCES	= HelloWorld.cc
-HelloWorld_LDADD	= -L$(top_srcdir)/src -lyui
+HelloWorld_SOURCES		= HelloWorld.cc
+HelloWorld_LDADD		= -L$(top_srcdir)/src -lyui
 
-SelectionBox1_SOURCES	= SelectionBox1.cc
-SelectionBox1_LDADD	= -L$(top_srcdir)/src -lyui
+ComboBox1_SOURCES		= ComboBox1.cc
+ComboBox1_LDADD			= -L$(top_srcdir)/src -lyui
 
-SelectionBox2_SOURCES	= SelectionBox2.cc
-SelectionBox2_LDADD	= -L$(top_srcdir)/src -lyui
+ComboBox1_editable_SOURCES	= ComboBox1-editable.cc
+ComboBox1_editable_LDADD	= -L$(top_srcdir)/src -lyui
+
+SelectionBox1_SOURCES		= SelectionBox1.cc
+SelectionBox1_LDADD		= -L$(top_srcdir)/src -lyui
+
+SelectionBox2_SOURCES		= SelectionBox2.cc
+SelectionBox2_LDADD		= -L$(top_srcdir)/src -lyui
