install XPMs for help dialog
svn path=/trunk/qt-pkg/; revision=47581

--- a/libyui-qt-pkg/src/CMakeLists.txt
+++ b/libyui-qt-pkg/src/CMakeLists.txt
@@ -74,3 +74,6 @@ SET_TARGET_PROPERTIES( py2qt_pkg PROPERTIES SOVERSION 2 )
 SET_TARGET_PROPERTIES( py2qt_pkg PROPERTIES LINK_FLAGS "-Wl,--no-undefined -Wl,-rpath -Wl,${UI_PLUGIN_DIR}" )
 
 INSTALL(TARGETS py2qt_pkg LIBRARY DESTINATION ${UI_PLUGIN_DIR} )
+
+ADD_SUBDIRECTORY( icons )
+
