--- a/libyui-qt-pkg/yast2-qt-pkg.spec.in
+++ b/libyui-qt-pkg/yast2-qt-pkg.spec.in
@@ -50,4 +50,7 @@ rm -rf "$RPM_BUILD_ROOT"
 %_libdir/YaST2/plugin/libpy2qt_pkg.so.*
 %_libdir/YaST2/plugin/libpy2qt_pkg.so
 
+%dir %_prefix/share/YaST2/images
+%_prefix/share/YaST2/images/*
+
 %changelog
