check for libyui includes
svn path=/trunk/ncurses/; revision=47598

--- a/libyui-ncurses/configure.in.in
+++ b/libyui-ncurses/configure.in.in
@@ -1,4 +1,4 @@
-## general configure.in.in
+##  yast2-ncurses configure.in.in
 
 ## initialize
 @YAST2-INIT-COMMON@
@@ -12,6 +12,14 @@
 ## but other distros do, #201705
 AC_CHECK_HEADER([ncursesw/curses.h],
 		[CPPFLAGS="$CPPFLAGS -I/usr/include/ncursesw"])
+
+## check for libyui includes
+AC_LANG_PUSH([C++])
+AC_CHECK_HEADERS([YaST2/yui/YWidgetFactory.h],
+                 [],
+                 [AC_MSG_ERROR([libyui headers not found - install package yast2-libyui-devel!])])
+AC_LANG_POP
+
 
 ## and generate the output
 @YAST2-OUTPUT@
