added missing dir
svn path=/trunk/ncurses/; revision=47765

--- a/libyui-ncurses/yast2-ncurses.spec.in
+++ b/libyui-ncurses/yast2-ncurses.spec.in
@@ -33,10 +33,14 @@ rm $RPM_BUILD_ROOT/@plugindir@/libpy2ncurses.la
 
 %files
 %defattr (-, root, root)
+%dir %{_libdir}
+%dir @plugindir@
 @plugindir@/libpy2ncurses.so.*
 
 %files devel
 %defattr (-, root, root)
 @plugindir@/libpy2ncurses.so
+%dir @includedir@
 @includedir@/ncurses/
 %doc @docdir@
+
