--- a/libyui-ncurses/yast2-ncurses.spec.in
+++ b/libyui-ncurses/yast2-ncurses.spec.in
@@ -33,7 +33,7 @@ rm $RPM_BUILD_ROOT/@plugindir@/libpy2ncurses.la
 
 %files
 %defattr (-, root, root)
-%dir ${_libdir}/YaST2
+%dir %{_libdir}/YaST2
 %dir @plugindir@
 @plugindir@/libpy2ncurses.so.*
 
