--- a/libyui-qt-pkg/yast2-qt-pkg.spec.in
+++ b/libyui-qt-pkg/yast2-qt-pkg.spec.in
@@ -16,6 +16,7 @@ Requires:       yast2-libyui       >= 2.16.47
 Requires:       yast2_theme >= 2.16.1
 Provides:	yast2-qt:/usr/lib/YaST2/plugin/libpy2qt_pkg.so.2
 Provides:	yast2_ui_pkg
+Recommends:     libqdialogsolver1
 
 %description
 -
