Filtering packages by status (#384085)
svn path=/trunk/ncurses-pkg/; revision=49747

--- a/libyui-ncurses-pkg/src/Makefile.am
+++ b/libyui-ncurses-pkg/src/Makefile.am
@@ -39,6 +39,7 @@ noinst_HEADERS =			\
 	NCPkgFilterPattern.h		\
 	NCPkgFilterLocale.h		\
 	NCPkgFilterRPMGroups.h		\
+	NCPkgFilterInstSummary.h	\
 	NCPkgStrings.h			\
 	NCZypp.h
 
@@ -68,6 +69,7 @@ libpy2ncurses_pkg_la_SOURCES =		\
 	NCPkgFilterPattern.cc		\
 	NCPkgFilterLocale.cc		\
 	NCPkgFilterRPMGroups.cc		\
+	NCPkgFilterInstSummary.cc	\
 	NCPkgStrings.cc
 
 
