fix definitions to enable the feature
svn path=/trunk/qt-pkg/; revision=50204

--- a/libyui-qt-pkg/CMakeLists.txt
+++ b/libyui-qt-pkg/CMakeLists.txt
@@ -19,4 +19,8 @@ SET(Y2QT_THEMEDIR ${CMAKE_INSTALL_PREFIX}/share/YaST2/theme)
 
 GENERATE_PACKAGING(${RPMNAME} ${VERSION})
 
+IF( YPKG_QT_CONFIRM_UNSUPPORTED_PACKAGES )
+  ADD_DEFINITIONS( -DYPKG_QT_CONFIRM_UNSUPPORTED_PACKAGES )
+ENDIF( YPKG_QT_CONFIRM_UNSUPPORTED_PACKAGES )
+
 ADD_SUBDIRECTORY(src)
