Added YDialogSpy for interactive introspection of a widget tree
svn path=/trunk/libyui/; revision=50914

--- a/libyui/src/Makefile.am
+++ b/libyui/src/Makefile.am
@@ -24,6 +24,7 @@ libyui_la_SOURCES =				\
 	YOptionalWidgetFactory.cc		\
 						\
 	YCommandLine.cc				\
+	YDialogSpy.cc				\
 	YEvent.cc				\
 	YEventFilter.cc				\
 	YEnvVar.cc				\
@@ -107,6 +108,7 @@ pkginclude_HEADERS =				\
 	YChildrenManager.h			\
 	YColor.h				\
 	YCommandLine.h				\
+	YDialogSpy.h				\
 	YEvent.h				\
 	YEventFilter.h				\
 	YEnvVar.h				\
