--- a/libyui-qt-graph/yast2-qt-graph.spec.in
+++ b/libyui-qt-graph/yast2-qt-graph.spec.in
@@ -2,8 +2,8 @@
 
 @HEADER@
 BuildRequires:	cmake libqt4-devel graphviz-devel
-BuildRequires:	yast2-devtools yast2-qt-devel >= 2.18.4 yast2-libyui-devel >= 2.18.3
-Requires:	yast2-qt >= 2.18.4 yast2-libyui >= 2.18.3
+BuildRequires:	yast2-devtools yast2-libyui-devel >= 2.18.7 yast2-qt-devel >= 2.18.6
+Requires:	yast2-libyui >= 2.18.7 yast2-qt >= 2.18.6
 Provides:	yast2-qt:/usr/lib/YaST2/plugin/libpy2qt_graph.so.2
 Provides:	yast2_ui_graph
 Summary:	-
