put the PDB texts back into the spec files. summaries first. From now on the SVN is the master source for the texts as far as factory (:head) is concerned. Old products will continue to overwrite the texts from PDB. %descriptions follow next
svn path=/trunk/ncurses/; revision=57666

--- a/libyui-ncurses/yast2-ncurses.spec.in
+++ b/libyui-ncurses/yast2-ncurses.spec.in
@@ -5,7 +5,7 @@
 BuildRequires:	doxygen dejagnu gcc-c++ yast2-devtools 
 BuildRequires:	libxcrypt-devel blocxx-devel ncurses-devel
 
-Summary:	-
+Summary:	YaST2 - Character Based User Interface
 Provides:	yast2_ui
 Requires:	glibc-locale
 BuildRequires:	yast2-libyui-devel >= 2.18.4 
@@ -15,7 +15,7 @@ Recommends:	yast2-ncurses-pkg
 -
 
 @HEADER-DEVEL@
-Summary:        -
+Summary:        YaST2 - Character Based User Interface
 Requires:	yast2-ncurses >= 2.16.15
 Requires:	ncurses-devel yast2-libyui-devel
 
