put the PDB texts back into the spec files. summaries first. From now on the SVN is the master source for the texts as far as factory (:head) is concerned. Old products will continue to overwrite the texts from PDB. %descriptions follow next
svn path=/trunk/libyui/; revision=57666

--- a/libyui/yast2-libyui.spec.in
+++ b/libyui/yast2-libyui.spec.in
@@ -16,14 +16,14 @@ Conflicts:	yast2-core < 2.16.38
 # libyui ImplPtr
 BuildRequires:	boost-devel
 
-Summary:	-
+Summary:	YaST2 - User Interface Engine
 Provides:	%{_libdir}/libyui.so.3.0.0
 
 %description
 -
 
 @HEADER-DEVEL@
-Summary:	-
+Summary:	YaST2 - User Interface Engine
 
 Requires:	glibc-devel
 Requires:	libstdc++-devel
