put the PDB texts back into the spec files. summaries first. From now on the SVN is the master source for the texts as far as factory (:head) is concerned. Old products will continue to overwrite the texts from PDB. %descriptions follow next
svn path=/trunk/qt-pkg/; revision=57666

--- a/libyui-qt-pkg/yast2-qt-pkg.spec.in
+++ b/libyui-qt-pkg/yast2-qt-pkg.spec.in
@@ -5,7 +5,7 @@
 BuildRequires:	docbook-xsl-stylesheets doxygen libdrm-devel libjpeg-devel libxcrypt-devel
 BuildRequires:  libxslt perl-XML-Writer libqt4-devel sgml-skel update-desktop-files
 
-Summary:	-
+Summary:	YaST2 - Graphical User Interface
 BuildRequires:  yast2-devtools >= 2.16.3
 Requires:	yast2-qt       >= 2.17.13
 BuildRequires:  yast2-qt-devel >= 2.17.13
