--- a/libyui-ncurses-pkg/yast2-ncurses-pkg.spec.in
+++ b/libyui-ncurses-pkg/yast2-ncurses-pkg.spec.in
@@ -2,6 +2,7 @@
 
 
 @HEADER@
+License: GPL v2 or later
 BuildRequires:	doxygen dejagnu gcc-c++ yast2-core-devel yast2-devtools
 BuildRequires:	libxcrypt-devel blocxx-devel ncurses-devel yast2-ncurses-devel
 
