--- a/libyui-ncurses/yast2-ncurses.spec.in
+++ b/libyui-ncurses/yast2-ncurses.spec.in
@@ -2,6 +2,7 @@
 
 
 @HEADER@
+Group:	System/YaST
 License: GPL v2 or later
 BuildRequires:	doxygen dejagnu gcc-c++ yast2-devtools 
 BuildRequires:	libxcrypt-devel blocxx-devel ncurses-devel
