Inserted the Group field from the Package Database (PDB).
This change requires create-spec from r57682, yast-devtools-2.18.9.

svn path=/trunk/qt-pkg/; revision=57687

--- a/libyui-qt-pkg/yast2-qt-pkg.spec.in
+++ b/libyui-qt-pkg/yast2-qt-pkg.spec.in
@@ -2,6 +2,7 @@
 
 
 @HEADER@
+Group:	System/YaST
 License: GPL v2 or later
 BuildRequires:	docbook-xsl-stylesheets doxygen libdrm-devel libjpeg-devel libxcrypt-devel
 BuildRequires:  libxslt perl-XML-Writer libqt4-devel sgml-skel update-desktop-files
