--- a/libyui-qt-graph/yast2-qt-graph.spec.in
+++ b/libyui-qt-graph/yast2-qt-graph.spec.in
@@ -8,7 +8,7 @@ BuildRequires:	yast2-devtools yast2-libyui-devel >= 2.18.7 yast2-qt-devel >= 2.1
 Requires:	yast2-libyui >= 2.18.7 yast2-qt >= 2.18.6
 Provides:	yast2-qt:/usr/lib/YaST2/plugin/libpy2qt_graph.so.2
 Provides:	yast2_ui_graph
-Supplements:	(yast2-storage:yast2-qt)
+Supplements:	packageand(yast2-storage:yast2-qt)
 Summary:	YaST graph plugin
 
 %description
