--- a/libyui-qt-pkg/src/CMakeLists.txt
+++ b/libyui-qt-pkg/src/CMakeLists.txt
@@ -10,6 +10,7 @@ ADD_DEFINITIONS(
 		-DQTLIBDIR=\\\"${LIB_INSTALL_DIR}\\\"
 		-DHELPIMAGEDIR=\\\"${CMAKE_INSTALL_PREFIX}/share/YaST2/images\\\"
 		-DPREFIX=\\\"${CMAKE_INSTALL_PREFIX}\\\"
+                -DSHOW_SINGLE_PRODUCT
 		)
 SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-format-nonliteral -fmessage-length=0" )
 
