--- a/libyui-qt-pkg/yast2-qt-pkg.spec.in
+++ b/libyui-qt-pkg/yast2-qt-pkg.spec.in
@@ -2,16 +2,18 @@
 
 
 @HEADER@
+Group:	System/YaST
+License: GPL v2 or later
 BuildRequires:	docbook-xsl-stylesheets doxygen libdrm-devel libjpeg-devel libxcrypt-devel
 BuildRequires:  libxslt perl-XML-Writer libqt4-devel sgml-skel update-desktop-files
 
-Summary:	-
+Summary:	YaST2 - Graphical User Interface
 BuildRequires:  yast2-devtools >= 2.16.3
 Requires:	yast2-qt       >= 2.17.13
 BuildRequires:  yast2-qt-devel >= 2.17.13
-BuildRequires:  libzypp-devel >= 4.7.0 
+BuildRequires:  libzypp-devel >= 6.19.3 
 BuildRequires:  yast2-libyui-devel >= 2.17.14
-Requires:  	libzypp >= 4.7.0 
+Requires:  	libzypp >= 6.19.0 
 Requires:       yast2-libyui       >= 2.17.14
 Requires:       yast2_theme >= 2.16.1
 Provides:	yast2-qt:/usr/lib/YaST2/plugin/libpy2qt_pkg.so.2
@@ -19,7 +21,8 @@ Provides:	yast2_ui_pkg
 Recommends:     libqdialogsolver1
 
 %description
--
+One of several user interfaces available for YaST2, based on Qt and the
+X Window System.
 
 %prep
 %setup
