--- a/libyui/yast2-libyui.spec.in
+++ b/libyui/yast2-libyui.spec.in
@@ -2,6 +2,8 @@
 
 
 @HEADER@
+Group:	System/YaST
+License: GPL v2 or later
 Source1:	yast2-libyui-rpmlintrc
 
 BuildRequires:	gcc-c++
@@ -16,22 +18,31 @@ Conflicts:	yast2-core < 2.16.38
 # libyui ImplPtr
 BuildRequires:	boost-devel
 
-Summary:	-
+Summary:	YaST2 - User Interface Engine
 Provides:	%{_libdir}/libyui.so.3.0.0
 
 %description
--
+This is the YaST2 user interface engine that provides the abstraction
+from graphical user interfaces (Qt, Gtk) and text based user interfaces
+(ncurses).
+
+This can be used independently of YaST2 for generic (C++) applications.
+This package has very few dependencies.
 
 @HEADER-DEVEL@
-Summary:	-
+Summary:	YaST2 - User Interface Engine
 
 Requires:	glibc-devel
 Requires:	libstdc++-devel
 Requires:	boost-devel
 
 %description devel
--
+This is the development package for the YaST2 user interface engine
+that provides the abstraction from graphical user interfaces (Qt, Gtk)
+and text based user interfaces (ncurses).
 
+This can be used independently of YaST2 for generic (C++) applications.
+This package has very few dependencies.
 
 @PREP@
 
