--- a/libyui-qt-pkg/yast2-qt-pkg.spec.in
+++ b/libyui-qt-pkg/yast2-qt-pkg.spec.in
@@ -10,7 +10,7 @@ BuildRequires:  libxslt perl-XML-Writer libqt4-devel sgml-skel update-desktop-fi
 Summary:	YaST2 - Graphical User Interface
 BuildRequires:  yast2-devtools >= 2.16.3
 Requires:	yast2-qt       >= 2.17.13
-%requires_eq:   libqt4  
+%requires_ge    libqt4
 BuildRequires:  yast2-qt-devel >= 2.17.13
 BuildRequires:  libzypp-devel >= 6.26.3
 BuildRequires:  yast2-libyui-devel >= 2.17.14
