--- a/libyui-ncurses-pkg/yast2-ncurses-pkg.spec.in
+++ b/libyui-ncurses-pkg/yast2-ncurses-pkg.spec.in
@@ -13,10 +13,12 @@ Provides:	yast2_ui_pkg
 Requires:	glibc-locale
 BuildRequires:	yast2-core-devel   >= 2.16.33
 BuildRequires:	yast2-libyui-devel >= 2.17.14
-BuildRequires:  libzypp-devel >= 4.2.3
+BuildRequires:	libzypp-devel >= 7.4.0
 Requires:	yast2-core >= 2.16.33
 #addItem(item, true)
 Requires:	yast2-ncurses >= 2.18.9
+Requires:	libzypp >= 7.4.0
+
 %description
 This package contains character based (ncurses) frontend of YaST2
 package manager
